beautify input and messages

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,6 +4,7 @@
     <a class="item">
       Messages
     </a>
+    <%= link_to "Logout", logout_path, method: :delete, class: "item" %>
     <div class="right menu">
       <div class="ui dropdown item">
         Account <i class="dropdown icon"></i>
