--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,14 +4,13 @@
 
 <h4 class="ui center aligned medium icon header">
   <i class="circular power off tiny icon"></i>
-  Log in to continue
+  Sign Up to continue
 </h4>
-
 
 <div class="ui placeholder segment">
   <div class="ui two column very relaxed stackable grid">
     <div class="column">
-      <%= form_for(:session, html: { class: "ui form", role: "form" }, url: login_path) do |f| %>
+      <%= form_for(@user, html: { class: "ui form", role: "form" }, url: signup_path, remote: true) do |f| %>
         <div class="field">
           <%= f.label :username, "Username" %>
           <div class="ui left icon input">
@@ -26,13 +25,13 @@
             <i class="lock icon"></i>
           </div>
         </div>
-        <%= f.button "Login", class: "ui submit button" %>
+        <%= f.button "Sign up", class: "ui submit button" %>
       <% end %>
     </div>
     <div class="middle aligned column">
       <div class="ui big orange button">
         <i class="signup icon"></i>
-        <%= link_to "Sign Up", signup_path %>
+        <%= link_to "Log in", login_path %>
       </div>
     </div>
   </div>
