--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,9 +16,15 @@
           <% end %>
         </div>
       </div>
-      <div class="item">
-          <div class="ui primary button">Sign Up</div>
-      </div>
+      <% if logged_in? %>
+        <div class="item">
+          <%= link_to "Log Out", logout_path, method: :delete, class: "ui primary button" %>
+        </div>
+      <% else %>
+        <div class="item">
+          <%= link_to 'Log In', login_path, class: "ui primary button" %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
