--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
 
 <h4 class="ui center aligned medium icon header">
   <i class="circular power off tiny icon"></i>
-  Sign Up to continue
+  Sign up to continue
 </h4>
 
 <div class="ui placeholder segment">
@@ -29,6 +29,9 @@
       <% end %>
     </div>
     <div class="middle aligned column">
+      <h4 class="ui center aligned small header">
+        Already have an account?
+      </h4>
       <div class="ui big orange button">
         <i class="signup icon"></i>
         <%= link_to "Log in", login_path %>
