add when the message was sent at to index

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,7 +1,7 @@
 <div class="event">
   <div class="content">
     <div class="summary">
-      <em><%= message.user.username %></em>: <%= message.body %>
+      <em><%= message.user.username %></em>: <%= message.body %> <span> <p class="span_created_at">Sent: <%= message.created_at.strftime('%m/%d/%Y, %I:%M %p') %></p>
     </div>
   </div>
 </div>
