improved the sent-at styling

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,9 +15,8 @@
   }
 }
 
-.span_created_at {
-  display: block;
-  float: right;
-  font-size: .9rem;
+.time-sent {
+  font-size: .8rem;
   color: gray;
+  margin-right: 1rem;
 }
