add to MVC to show all users and a user

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,3 +20,14 @@
   color: gray;
   margin-right: 1rem;
 }
+
+.center_reveal {
+  display: block;
+  text-align: center;
+  margin: .6rem 0;
+  cursor: pointer;
+}
+
+.user_container {
+  padding: 1rem 0;
+}
