--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -22,7 +22,6 @@
       </div>
     </div>
   </div>
-
   <div class="four wide column">
     <div class="ui fluid raised card chatbox">
       <div class="content">
@@ -33,9 +32,7 @@
           <a class="item">
             Messages
           </a>
-          <a class="item">
-            Friends
-          </a>
+          <%= link_to 'Friends', users_path, class: "item" %>
         </div>
       </div>
     </div>
