--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,7 +1,8 @@
 <div class="event">
   <div class="content">
     <div class="summary">
-      <span class="time-sent">(<%= message.created_at.strftime('%d/%m/%Y, %I:%M %p') %>)</span><em><%= message.user.username %></em>: <%= message.body %>
+      <span class="time-sent">(<%= message.created_at.strftime('%d/%m/%Y, %I:%M %p') %>)</span>
+      <em><%= message.user.username %></em>: <%= message.body %>
     </div>
   </div>
 </div>
